--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
   <div id="app"></div>
+  <script>
+    window.$docsify = {
+      name: 'RCE Attack',
+      homepage: 'home.md', // 👈 this tells Docsify to load home.md instead of README.md
+      loadSidebar: true     // optional: if you're using _sidebar.md
+    };
+  </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 </body>
 </html>
