--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script>
     window.$docsify = {
       name: 'RCE Attack',
-      homepage: 'home.md', // 👈 this tells Docsify to load home.md instead of README.md
-      loadSidebar: true     // optional: if you're using _sidebar.md
+      homepage: 'home.md',
+      loadSidebar: true
     };
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
