--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name: 'RCE Attack Demo',
       repo: '',
       loadSidebar: true,
-      loadSidebarFrom: '/docs/_sidebar.md',
+      loadSidebarFrom: '_sidebar.md',
       homepage: 'index.md'
     };
   </script>
