--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <script>
     window.$docsify = {
       name: 'RCE Attack Demo',
-      repo: '',
       loadSidebar: true,
-      loadSidebarFrom: '_sidebar.md',
+      loadSidebarFrom: '/_sidebar.md',
       homepage: 'index.md'
     };
   </script>
