--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <script>
     window.$docsify = {
       name: 'RCE Attack Demo',
-      loadSidebar: true,
-      loadSidebarFrom: '/_sidebar.md',
+      loadSidebar: '_sidebar.md',
       homepage: 'index.md'
     };
   </script>
