--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script>
     window.$docsify = {
       name: 'RCE Attack Demo',
-      loadSidebar: '_sidebar.md',
+      loadSidebar: 'sidebar.md',
       homepage: 'index.md'
     };
   </script>
